Refactor sorting logic and remove unused methods.
Updated the sorting function to reference `getFirst()` for improved readability and corrected random number generation to use absolute values. Removed obsolete methods `findPhoneNumber` and `findPhoneNumber2` to clean up unused code and improve maintainability.